dumpat sql, installerat om servern och imorterat

--- a/labbar/labb-9/admin/.htaccess
+++ b/labbar/labb-9/admin/.htaccess
@@ -1,4 +1,4 @@
 AuthName        "bara för medlemar"
 AuthType        Basic
-AuthUserFile    C:\github\.htpasswd
+AuthUserFile    /etc/.htpasswd
 require         valid-user
